# elasticsearch-index-downloader

./: .flake8  .gitignore  IndexDownloader.py  README.md  main.py  pyproject.toml  requirements.txt
es_index_downloader/: index_downloader.py
