[tool.poetry]
name = "es_index_downloader"
version = "0.1.0"
description = "Simple tool for download an ES index as JSON files"
authors = ["Jaap Blom <jblom@beeldengeluid.nl>"]
readme = "README.md"
packages = [{include = "elasticsearch_index_downloader"}]

[tool.poetry.dependencies]
python = "^3.10"
elasticsearch7 = "^7.17.8"
urllib3 = "^1.26.14"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.4.1"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target_version = ['py310']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | build
    | dist
  )/
)
'''

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
